Added Tests for some commands

--- a/Go-Cobra-Task/Makefile
+++ b/Go-Cobra-Task/Makefile
@@ -24,9 +24,9 @@ mod:
 vendor:
 	go mod vendor
 
-# .PHONY: test
-# test: mod vendor
-# 	go test ./... -covermode=atomic -coverpkg=./... -v
+.PHONY: test
+test: mod vendor
+	go test ./tests -v
 
 .PHONY: lint
 lint: getlint
